--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ span{color:red;}
     <ul>
         <li><a href="https://www.baidu.com/">百度</a><span>の</span><a href="https://tieba.baidu.com/">贴吧</a></li>
         <li><a href="https://sports.sina.com.cn/">新浪</a>の<a href="https://weibo.com/"><span>微博</span></a></li>
-		<li><a href="http://www.163.com/">网易</a><span>の</span><a href="http://email.163.com/">邮箱</a></li>
+        <li><a href="http://www.163.com/">网易</a><span>の</span><a href="http://email.163.com/">邮箱</a></li>
         <li><a href="http://www.qq.com/">腾讯</a><span>の</span><a href="https://mail.qq.com/">邮箱</a></li>
         <li><a href="https://www.sohu.com/">搜狐</a></li>
         <li><a href="http://www.ifeng.com/">凤凰网</a></li>
@@ -68,7 +68,7 @@ span{color:red;}
         <li><a href="https://news.google.com/news?ned=us">News</a><span>の</span><a href="https://news.google.com/news?ned=cn">新闻</a></li>
         <li><a href="http://www.thepaper.cn/">澎湃新闻</a></li>
         <li><a href="http://www.people.com.cn/">人民网</a></li>
-		<li><a href="http://www.icbc.com.cn/">工商银行</a></li>
+        <li><a href="http://www.icbc.com.cn/">工商银行</a></li>
         <li><a href="http://www.psbc.com/">邮政储蓄</a></li>
         <li><a href="https://cn.bing.com/"><span>Bing</span></a></li><!-- 2nd Line -->
         <li><a href="https://www.youtube.com/?gl=US"><span>YouTube</span></a></li>
@@ -78,22 +78,22 @@ span{color:red;}
         <li><a href="http://www.zol.com.cn/">ZOL</a></li>
         <li><a href="http://www.bupt.edu.cn/">BUPT</a></li>
         <li><a href="http://www.qidian.com/">起点中文网</a></li><!-- 3rd Line -->
-		<li><a href="http://www.cnbeta.com/">cnBeta</a></li>
+        <li><a href="http://www.cnbeta.com/">cnBeta</a></li>
         <li><a href="https://stackoverflow.com/">stack<span>over</span>flow</a></li>
         <li><a href="https://zh.wikipedia.org/">Wikipedia</a></li>
         <li><a href="http://www.gogeeks.cn/">GoGeeks</a></li>
         <li><a href="http://tieba.baidu.com/f?kw=%E6%98%BE%E5%8D%A1&fr=index&fp=0&ie=utf-8"><span>显卡吧</span></a></li>
         <li><a href="http://lib.bupt.edu.cn/">图书馆</a></li>
-        <li><a href="http://www.piaotian.net/">飘天文学</a></li><!-- 4th Line -->
+        <li><a href="http://www.toutiao.com/">今日头条</a></li><!-- 4th Line -->
         <li><a href="https://www.v2ex.com/"><span>V2EX</span></a></li>
         <li><a href="https://segmentfault.com/"><span>seg</span>ment<span>fault</span></a></li>
-		<li><a href="http://10.3.8.211/"><span>WG</span></a></li>
+        <li><a href="http://10.3.8.211/"><span>WG</span></a></li>
         <li><a href="https://tv.byr.cn/"><span>IPTV</span></a></li>
         <li><a href="https://www.cnblogs.com/">cnBlogs</a></li>
         <li><a href="http://www.12306.cn/">12306</a></li>
         <li><a href="https://www.douyu.com/room/follow">DY</a><span>の</span><a href="https://www.panda.tv/myfollow">PD</a></li><!-- 5th Line -->
         <li><a href="https://github.com/">GitHub</a>
-		<li><a href="https://www.nowcoder.com/">NowCoder</a></li>
+        <li><a href="https://www.nowcoder.com/">NowCoder</a></li>
         <li><a href="https://bbs.byr.cn/#!default">BBS</a><span>の</span><a href="http://bt.byr.cn/">BT</a></li>
         <li><a href="http://hdtv.neu6.edu.cn/"><span>NEUTV</span></a></li>
         <li><a href="http://www.csdn.net/">CSDN</a></li>
