--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@ span{color:red;}
         <li><a href="https://www.v2ex.com/"><span>V2EX</span></a></li>
         <li><a href="https://segmentfault.com/"><span>seg</span>ment<span>fault</span></a></li>
         <li><a href="http://10.3.8.212/"><span>WG</span></a></li>
-        <li><a href="https://tv.byr.cn/"><span>IPTV</span></a></li>
+        <li><a href="https://tv.byr.cn/">IPTV</a><span>の</span><a href="http://hdtv.neu6.edu.cn/">NEUTV</a></li>
         <li><a href="https://www.cnblogs.com/">cnBlogs</a></li>
         <li><a href="http://www.12306.cn/">12306</a></li>
         <li><a href="https://www.douyu.com/room/follow">DY</a><span>の</span><a href="https://www.panda.tv/myfollow">PD</a></li><!-- 5th Line -->
         <li><a href="https://github.com/">GitHub</a>
         <li><a href="https://www.nowcoder.com/">NowCoder</a></li>
         <li><a href="https://bbs.byr.cn/#!default">BBS</a><span>の</span><a href="http://bt.byr.cn/">BT</a></li>
-        <li><a href="http://hdtv.neu6.edu.cn/"><span>NEUTV</span></a></li>
+        <li><a href="https://juejin.im/">Xitu</a></li>
         <li><a href="http://www.csdn.net/">CSDN</a></li>
         <li><a href="https://www.oschina.net/">OSChina</a></li>
         <li><a href="https://www.bilibili.com/">Bilibili</a><span>の</span><a href="https://www.bilibili.com/account/dynamic">DM</a></li><!-- 6th Line -->
