change some sites
change some sites

--- a/g.html
+++ b/g.html
@@ -9,7 +9,7 @@
 <base target="_blank">
 <style>
 
-body{padding:0;margin:0;background:url(images/jjdjr.jpg) no-repeat center top;background-attachment:fixed;font-size:14px;color:#000000;font-family:"微软雅黑";}
+body{padding:0;margin:0;background:#C7EDCC;background-attachment:fixed;font-size:14px;color:#000000;font-family:"微软雅黑";}
 ul,dl,dt,dd,p{list-style-type:none;padding:0;margin:0;}
 a{text-decoration:none;}
 .fl{float:left;}
