--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <base target="_blank">
 <style>
 
-body{padding:0;margin:0;background:#C7EDCC;background-attachment:fixed;font-size:14px;color:#000000;font-family:"微软雅黑";}
+body{padding:0;margin:0;background:url(images/jjdjr.jpg) no-repeat center top;background-attachment:fixed;font-size:14px;color:#000000;font-family:"微软雅黑";}
 ul,dl,dt,dd,p{list-style-type:none;padding:0;margin:0;}
 a{text-decoration:none;}
 .fl{float:left;}
@@ -42,15 +42,15 @@ span{color:red;}
     <a href="Bookmark.html" title="Bookmark"><img src="images/g_n.png"></a>
     </div>
         <div class="search fl" style="margin-left:10px">
-          <form class="form fl" action="https://www.google.com/search" type="get" target="_blank">
-              <input type="text" name="q" class="text fl" value="" placeholder="Google it by hosts">
-              <input type="submit" value="Search" class="button fl">
-          </form>
-        </div>
-        <div class="search fl">
           <form class="form fl" action="https://www.baidu.com/s" type="get" target="_blank">
               <input type="text" name="wd" class="text fl" value="" placeholder="百度一下">
               <input type="submit" value="搜索" class="button fl">
+          </form>
+        </div>
+        <div class="search fl">
+          <form class="form fl" action="https://www.google.com/search" type="get" target="_blank">
+              <input type="text" name="q" class="text fl" value="" placeholder="Google it by ss">
+              <input type="submit" value="Search" class="button fl">
           </form>
         </div>
 </div>
@@ -71,14 +71,14 @@ span{color:red;}
         <li><a href="http://www.icbc.com.cn/">工商银行</a></li>
         <li><a href="http://www.psbc.com/">邮政储蓄</a></li>
         <li><a href="https://cn.bing.com/"><span>Bing</span></a></li><!-- 2nd Line -->
-        <li><a href="https://www.youtube.com/?gl=US"><span>YouTube</span></a></li>
+        <li><a href="https://www.bilibili.com/">Bilibili</a><span>の</span><a href="https://www.youku.com/">优酷</a></li>
         <li><a href="https://www.zhihu.com/"><span>知乎</span></a>の<a href="https://www.quora.com/"><span>Quora</span></a></li>
-        <li><a href="https://www.jd.com/">京东商城</a></li>
         <li><a href="https://www.taobao.com/">淘宝网</a></li>
+        <li><a href="https://www.jd.com/">京东商城</a></li>
         <li><a href="http://www.zol.com.cn/">ZOL</a></li>
         <li><a href="http://www.bupt.edu.cn/">BUPT</a></li>
         <li><a href="http://www.qidian.com/">起点中文网</a></li><!-- 3rd Line -->
-        <li><a href="http://www.cnbeta.com/">cnBeta</a></li>
+        <li><a href="https://www.douyu.com/room/follow">DY</a><span>の</span><a href="https://www.panda.tv/myfollow">PD</a></li>
         <li><a href="https://stackoverflow.com/">stack<span>over</span>flow</a></li>
         <li><a href="https://zh.wikipedia.org/">Wikipedia</a></li>
         <li><a href="http://www.gogeeks.cn/">GoGeeks</a></li>
@@ -87,18 +87,18 @@ span{color:red;}
         <li><a href="http://www.toutiao.com/">今日头条</a></li><!-- 4th Line -->
         <li><a href="https://www.v2ex.com/"><span>V2EX</span></a></li>
         <li><a href="https://segmentfault.com/"><span>seg</span>ment<span>fault</span></a></li>
-        <li><a href="http://10.3.8.212/"><span>WG</span></a></li>
-        <li><a href="https://tv.byr.cn/">IPTV</a><span>の</span><a href="http://hdtv.neu6.edu.cn/">NEUTV</a></li>
+        <li><a href="https://www.hupu.com/">虎扑</a><span>の</span><a href="https://www.g-cores.com/">机核</a></li>
+        <li><a href="http://www.cnbeta.com/">cnBeta</a></li>
         <li><a href="https://www.cnblogs.com/">cnBlogs</a></li>
         <li><a href="http://www.12306.cn/">12306</a></li>
-        <li><a href="https://www.douyu.com/room/follow">DY</a><span>の</span><a href="https://www.panda.tv/myfollow">PD</a></li><!-- 5th Line -->
+        <li><a href="https://tv.byr.cn/">IPTV</a><span>の</span><a href="http://hdtv.neu6.edu.cn/">NEUTV</a></li><!-- 5th Line -->
         <li><a href="https://github.com/">GitHub</a>
-        <li><a href="https://www.nowcoder.com/">NowCoder</a></li>
-        <li><a href="https://bbs.byr.cn/#!default">BBS</a><span>の</span><a href="http://bt.byr.cn/">BT</a></li>
         <li><a href="https://juejin.im/">Xitu</a></li>
-        <li><a href="http://www.csdn.net/">CSDN</a></li>
+        <li><a href="https://bbs.byr.cn/#!default">BBS</a><span>の</span><a href="http://bt.byr.cn/">BT</a></li>
         <li><a href="https://www.oschina.net/">OSChina</a></li>
-        <li><a href="https://www.bilibili.com/">Bilibili</a><span>の</span><a href="https://www.bilibili.com/account/dynamic">DM</a></li><!-- 6th Line -->
+        <li><a href="http://www.csdn.net/">CSDN</a></li>
+        <li><a href="https://www.nowcoder.com/">NowCoder</a></li>
+        <li><a href="https://www.youtube.com/?gl=US"><span>YouTube</span></a></li><!-- 6th Line -->
     </ul>
 </div>
 
