--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ span{color:red;}
         <li><a href="http://www.toutiao.com/">今日头条</a></li><!-- 4th Line -->
         <li><a href="https://www.v2ex.com/"><span>V2EX</span></a></li>
         <li><a href="https://segmentfault.com/"><span>seg</span>ment<span>fault</span></a></li>
-        <li><a href="https://www.hupu.com/">虎扑</a><span>の</span><a href="https://www.g-cores.com/">机核</a></li>
+        <li><a href="https://www.hupu.com/">虎扑</a><span>の</span><a href="https://www.gcores.com/">机核</a></li>
         <li><a href="http://www.cnbeta.com/">cnBeta</a></li>
         <li><a href="https://www.cnblogs.com/">cnBlogs</a></li>
         <li><a href="http://www.12306.cn/">12306</a></li>
