--- a/simple.html
+++ b/simple.html
@@ -66,23 +66,23 @@ span{color:red;}
         <li><a href="https://www.sogou.com/">搜狗</a></li><!-- 1st Line -->
         <li><a href="https://www.google.com/ncr" style="font-size: 18px">Google</a><span>の</span><a href="https://drive.google.com/drive/" style="font-size: 18px">Drive</a></li>
         <li><a href="https://news.google.com/news?ned=us">News</a><span>の</span><a href="https://news.google.com/news?ned=cn">新闻</a></li>
-        <li><a href="https://music.163.com/"><span>网易云音乐</span></a></li>
-        <li><a href="https://tophub.today/">今日头条</a></li>
+        <li><a href="https://music.163.com/"><span>云音乐</span></a></li>
+        <li><a href="https://tophub.today/">今日热榜</a></li>
         <li><a href="http://www.thepaper.cn/">澎湃</a><span>の</span><a href="http://www.people.com.cn/">人民</a></li>
         <li><a href="http://www.icbc.com.cn/">工银</a><span>の</span><a href="http://www.psbc.com/">邮储</a></li>
         <li><a href="https://cn.bing.com/"><span>Bing</span></a></li><!-- 2nd Line -->
         <li><a href="https://www.bilibili.com/">Bilibili</a><span>の</span><a href="https://www.youku.com/">优酷</a></li>
         <li><a href="https://www.zhihu.com/"><span>知乎</span></a>の<a href="https://www.quora.com/"><span>Quora</span></a></li>
         <li><a href="https://www.taobao.com/">淘宝网</a></li>
+        <li><a href="https://www.fliggy.com/">飞猪</a></li>
         <li><a href="https://www.jd.com/">京东商城</a></li>
-        <li><a href="http://tieba.baidu.com/f?kw=%E6%98%BE%E5%8D%A1&fr=index&fp=0&ie=utf-8"><span>显卡吧</span></a><span>の</span><a href="http://www.zol.com.cn/">ZOL</a></li>
-        <li><a href="http://www.bupt.edu.cn/">BUPT</a><span>の</span><a href="http://lib.bupt.edu.cn/">图书馆</a></li>
+        <li><a href="http://tieba.baidu.com/f?kw=%E6%98%BE%E5%8D%A1&fr=index&fp=0&ie=utf-8"><span>显卡</span></a><span>の</span><a href="http://www.zol.com.cn/">ZOL</a></li>
         <li><a href="http://www.qidian.com/">起点中文网</a></li><!-- 3rd Line -->
         <li><a href="https://www.douyu.com/room/follow">DY</a><span>の</span><a href="https://www.panda.tv/myfollow">PD</a></li>
         <li><a href="https://stackoverflow.com/">stack<span>over</span>flow</a></li>
         <li><a href="https://zh.wikipedia.org/">Wikipedia</a></li>
         <li><a href="https://www.gamersky.com/">游民星空</a></li>
-        <li><a href="http://tieba.baidu.com/f?kw=%E6%98%BE%E5%8D%A1&fr=index&fp=0&ie=utf-8"><span>显卡吧</span></a></li>
+        <li><a href="https://bbs.nga.cn/">NGA</a></li>
         <li><a href="https://www.douban.com/">豆瓣</a></li>
         <li><a href="http://www.bupt.edu.cn/">BUPT</a><span>の</span><a href="http://lib.bupt.edu.cn/">图书馆</a></li><!-- 4th Line -->
         <li><a href="https://www.v2ex.com/"><span>V2EX</span></a></li>
