--- a/simple.html
+++ b/simple.html
@@ -66,7 +66,7 @@ span{color:red;}
         <li><a href="https://www.sogou.com/">搜狗</a></li><!-- 1st Line -->
         <li><a href="https://www.google.com/ncr" style="font-size: 18px">Google</a><span>の</span><a href="https://drive.google.com/drive/" style="font-size: 18px">Drive</a></li>
         <li><a href="https://news.google.com/news?ned=us">News</a><span>の</span><a href="https://news.google.com/news?ned=cn">新闻</a></li>
-        <li><a href="https://music.163.com/"><span>云音乐</span></a></li>
+        <li><a href="https://wx.qq.com/">微信</a><span>の<a href="https://music.163.com/"><span>云音乐</span></a></li>
         <li><a href="https://tophub.today/">今日热榜</a></li>
         <li><a href="http://www.thepaper.cn/">澎湃</a><span>の</span><a href="http://www.people.com.cn/">人民</a></li>
         <li><a href="http://www.icbc.com.cn/">工银</a><span>の</span><a href="http://www.psbc.com/">邮储</a></li>
