--- a/simple.html
+++ b/simple.html
@@ -67,7 +67,7 @@ span{color:red;}
         <li><a href="https://www.google.com/ncr" style="font-size: 18px">Google</a><span>の</span><a href="https://drive.google.com/drive/" style="font-size: 18px">Drive</a></li>
         <li><a href="https://news.google.com/news?ned=us">News</a><span>の</span><a href="https://news.google.com/news?ned=cn">新闻</a></li>
         <li><a href="https://wx.qq.com/">微信</a><span>の<a href="https://music.163.com/"><span>云音乐</span></a></li>
-        <li><a href="https://tophub.today/">今日热榜</a></li>
+        <li><a href="https://tophub.today/">今日热榜</a>の<a href="https://mo.fish//"><span>摸鱼</span></a></li>
         <li><a href="http://www.thepaper.cn/">澎湃</a><span>の</span><a href="http://www.people.com.cn/">人民</a></li>
         <li><a href="http://www.icbc.com.cn/">工银</a><span>の</span><a href="http://www.psbc.com/">邮储</a></li>
         <li><a href="https://cn.bing.com/"><span>Bing</span></a></li><!-- 2nd Line -->
