--- a/simple.html
+++ b/simple.html
@@ -84,7 +84,7 @@ span{color:red;}
         <li><a href="https://www.gamersky.com/">游民星空</a></li>
         <li><a href="https://bbs.nga.cn/">NGA</a></li>
         <li><a href="https://www.douban.com/">豆瓣</a></li>
-        <li><a href="http://www.bupt.edu.cn/">BUPT</a><span>の</span><a href="http://lib.bupt.edu.cn/">图书馆</a></li><!-- 4th Line -->
+        <li><a href="http://www.bupt.edu.cn/">BUPT</a><span>の</span><a href="https://bj.ke.com/">贝壳</a></li><!-- 4th Line -->
         <li><a href="https://www.v2ex.com/"><span>V2EX</span></a></li>
         <li><a href="https://segmentfault.com/"><span>seg</span>ment<span>fault</span></a></li>
         <li><a href="https://www.hupu.com/">虎扑</a><span>の</span><a href="https://www.gcores.com/">机核</a></li>
