--- a/simple.html
+++ b/simple.html
@@ -59,14 +59,14 @@ span{color:red;}
     <ul>
         <li><a href="https://www.baidu.com/">百度</a><span>の</span><a href="https://tieba.baidu.com/">贴吧</a></li>
         <li><a href="https://sports.sina.com.cn/">新浪</a>の<a href="https://weibo.com/"><span>微博</span></a></li>
-        <li><a href="http://www.qq.com/">腾讯</a><span>の</span><a href="https://v.qq.com/">视频</a><span>の</span><a href="https://mail.qq.com/">邮箱</a></li>
+        <li><a href="http://www.qq.com/">腾讯</a><span>の</span><a href="https://mail.qq.com/">邮箱</a></li>
         <li><a href="http://www.163.com/">网易</a><span>の</span><a href="http://email.163.com/">邮箱</a></li>
         <li><a href="https://www.sohu.com/">搜狐</a></li>
         <li><a href="http://www.ifeng.com/">凤凰网</a></li>
         <li><a href="https://www.sogou.com/">搜狗</a></li><!-- 1st Line -->
         <li><a href="https://www.google.com/ncr" style="font-size: 18px">Google</a><span>の</span><a href="https://drive.google.com/drive/" style="font-size: 18px">Drive</a></li>
         <li><a href="https://news.google.com/news?ned=us">News</a><span>の</span><a href="https://news.google.com/news?ned=cn">新闻</a></li>
-        <li><a href="https://wx.qq.com/">微信</a><span>の<a href="https://music.163.com/"><span>云音乐</span></a></li>
+        <li><a href="https://wx.qq.com/">微信</a><span>の</span><a href="https://v.qq.com/">视频</a></li>
         <li><a href="https://tophub.today/">热榜</a><span>の</span><a href="https://mo.fish/">摸鱼</a></li>
         <li><a href="http://www.thepaper.cn/">澎湃</a><span>の</span><a href="http://www.people.com.cn/">人民</a></li>
         <li><a href="http://www.icbc.com.cn/">工银</a><span>の</span><a href="http://www.psbc.com/">邮储</a></li>
@@ -83,7 +83,7 @@ span{color:red;}
         <li><a href="https://zh.wikipedia.org/">Wikipedia</a></li>
         <li><a href="https://www.gamersky.com/">游民星空</a></li>
         <li><a href="https://bbs.nga.cn/">NGA</a></li>
-        <li><a href="https://www.douban.com/">豆瓣</a></li>
+        <li><a href="https://www.douban.com/">豆瓣</a><span>の</span><a href="https://music.163.com/">云音乐</a></li>
         <li><a href="http://www.bupt.edu.cn/">BUPT</a><span>の</span><a href="https://bj.ke.com/">贝壳</a></li><!-- 4th Line -->
         <li><a href="https://www.v2ex.com/"><span>V2EX</span></a></li>
         <li><a href="https://segmentfault.com/"><span>seg</span>ment<span>fault</span></a></li>
