--- a/simple.html
+++ b/simple.html
@@ -80,12 +80,12 @@ span{color:red;}
         <li><a href="http://www.qidian.com/">起点中文网</a></li><!-- 3rd Line -->
         <li><a href="https://www.douyu.com/room/follow">DY</a><span>の</span><a href="https://www.panda.tv/myfollow">PD</a></li>
         <li><a href="https://stackoverflow.com/">stack<span>over</span>flow</a></li>
-        <li><a href="https://zh.wikipedia.org/">Wikipedia</a></li>
+        <li><a href="https://www.douyin.com/">抖音</a></li>
         <li><a href="https://www.gamersky.com/">游民星空</a></li>
-        <li><a href="https://bbs.nga.cn/">NGA</a></li>
+        <li><a href="https://zh.wikipedia.org/">Wikipedia</a></li>
         <li><a href="https://www.douban.com/">豆瓣</a><span>の</span><a href="https://music.163.com/">云音乐</a></li>
         <li><a href="http://www.bupt.edu.cn/">BUPT</a><span>の</span><a href="https://bj.ke.com/">贝壳</a></li><!-- 4th Line -->
-        <li><a href="https://www.v2ex.com/"><span>V2EX</span></a></li>
+        <li><a href="https://bbs.nga.cn/">NGA</a></li>
         <li><a href="https://segmentfault.com/"><span>seg</span>ment<span>fault</span></a></li>
         <li><a href="https://www.hupu.com/">虎扑</a><span>の</span><a href="https://www.gcores.com/">机核</a></li>
         <li><a href="http://www.cnbeta.com/">cnBeta</a></li>
@@ -93,7 +93,7 @@ span{color:red;}
         <li><a href="http://www.12306.cn/">12306</a></li>
         <li><a href="https://tv.byr.cn/">IPTV</a><span>の</span><a href="http://hdtv.neu6.edu.cn/">NEUTV</a></li><!-- 5th Line -->
         <li><a href="https://github.com/">GitHub</a>
-        <li><a href="https://juejin.im/">Xitu</a></li>
+        <li><a href="https://juejin.im/">Xitu</a>の<a href="https://www.v2ex.com/"><span>V2EX</span></a></li>
         <li><a href="https://bbs.byr.cn/#!default">BBS</a><span>の</span><a href="http://bt.byr.cn/">BT</a></li>
         <li><a href="https://www.oschina.net/">OSChina</a></li>
         <li><a href="http://www.csdn.net/">CSDN</a></li>
