--- a/simple.html
+++ b/simple.html
@@ -79,15 +79,15 @@ span{color:red;}
         <li><a href="https://tool.oschina.net/">Tools</a></li>
         <li><a href="http://www.qidian.com/">起点中文网</a></li><!-- 3rd Line -->
         <li><a href="https://www.douyu.com/room/follow">DY</a><span>の</span><a href="https://www.panda.tv/myfollow">PD</a></li>
-        <li><a href="https://stackoverflow.com/">s<span>o</span>f</a><span>の</span><a href="https://segmentfault.com/">s<span>m</span>f</a></li>
-        <li><a href="https://www.douyin.com/">抖音</a></li>
         <li><a href="https://www.gamersky.com/">游民星空</a></li>
+        <li><a href="https://www.douyin.com/">抖音</a></li>
+        <li><a href="https://www.youtube.com/?gl=US"><span>YouTube</span></a></li>
         <li><a href="https://zh.wikipedia.org/">Wikipedia</a></li>
         <li><a href="https://www.douban.com/">豆瓣</a><span>の</span><a href="https://music.163.com/">云音乐</a></li>
         <li><a href="http://www.bupt.edu.cn/">BUPT</a><span>の</span><a href="https://bj.ke.com/">贝壳</a></li><!-- 4th Line -->
         <li><a href="https://bbs.nga.cn/">NGA</a></li>
-        <li><a href="https://www.youtube.com/?gl=US"><span>YouTube</span></a></li>
         <li><a href="https://www.hupu.com/">虎扑</a><span>の</span><a href="https://www.gcores.com/">机核</a></li>
+        <li><a href="http://www.yxzzd.com/">Xbox早知道</li>
         <li><a href="http://www.cnbeta.com/">cnBeta</a></li>
         <li><a href="https://www.cnblogs.com/">cnBlogs</a></li>
         <li><a href="http://www.12306.cn/">12306</a></li>
@@ -98,7 +98,7 @@ span{color:red;}
         <li><a href="https://www.oschina.net/">OSChina</a></li>
         <li><a href="http://www.csdn.net/">CSDN</a></li>
         <li><a href="https://www.nowcoder.com/">NowCoder</a></li>
-        <li><a href="https://stackoverflow.com/">s<span>o</span>f</a><span>の</span><a href="https://segmentfault.com/">s<span>m</span>f</a></li><!-- 6th Line -->
+        <li><a href="https://stackoverflow.com/">S<span>o</span>F</a><span>の</span><a href="https://segmentfault.com/">S<span>g</span>F</a></li><!-- 6th Line -->
     </ul>
 </div>
 
