--- a/simple.html
+++ b/simple.html
@@ -98,7 +98,7 @@ span{color:red;}
         <li><a href="https://www.oschina.net/">OSChina</a></li>
         <li><a href="http://www.csdn.net/">CSDN</a></li>
         <li><a href="https://www.nowcoder.com/">NowCoder</a></li>
-        <li><a href="https://stackoverflow.com/">S<span>o</span>F</a><span>の</span><a href="https://segmentfault.com/">S<span>g</span>F</a></li><!-- 6th Line -->
+        <li><a href="https://stackoverflow.com/">S<span>O</span>F</a><span>の</span><a href="https://segmentfault.com/">S<span>G</span>F</a></li><!-- 6th Line -->
     </ul>
 </div>
 
