--- a/simple.html
+++ b/simple.html
@@ -76,8 +76,8 @@ span{color:red;}
         <li><a href="https://www.taobao.com/">淘宝</a><span>の</span><a href="https://www.fliggy.com/">飞猪</a></li>
         <li><a href="https://www.jd.com/">京东商城</a></li>
         <li><a href="http://tieba.baidu.com/f?kw=%E6%98%BE%E5%8D%A1&fr=index&fp=0&ie=utf-8"><span>显卡</span></a><span>の</span><a href="http://www.zol.com.cn/">ZOL</a></li>
-        <li><a href="https://tool.oschina.net/">Tools</a></li>
-        <li><a href="http://www.qidian.com/">起点中文网</a></li><!-- 3rd Line -->
+        <li><a href="https://weread.qq.com/">微信读书</a></li>
+        <li><a href="http://www.qidian.com/">起点</a><span>の</span><a href="https://fanqienovel.com/">番茄</a></li><!-- 3rd Line -->
         <li><a href="https://www.douyu.com/room/follow">DY</a><span>の</span><a href="https://www.panda.tv/myfollow">PD</a></li>
         <li><a href="https://www.gamersky.com/">游民星空</a></li>
         <li><a href="https://www.douyin.com/">抖音</a></li>
@@ -95,7 +95,7 @@ span{color:red;}
         <li><a href="https://github.com/">GitHub</a>
         <li><a href="https://juejin.im/">Xitu</a>の<a href="https://www.v2ex.com/"><span>V2EX</span></a></li>
         <li><a href="https://bbs.byr.cn/#!default">BBS</a><span>の</span><a href="http://bt.byr.cn/">BT</a></li>
-        <li><a href="https://www.oschina.net/">OSChina</a></li>
+        <li><a href="https://www.oschina.net/">OSChina</a><span>の</span><a href="https://tool.oschina.net/">Tools</a></li>
         <li><a href="http://www.csdn.net/">CSDN</a></li>
         <li><a href="https://www.nowcoder.com/">NowCoder</a></li>
         <li><a href="https://stackoverflow.com/">S<span>O</span>F</a><span>の</span><a href="https://segmentfault.com/">S<span>G</span>F</a></li><!-- 6th Line -->
