--- a/simple.html
+++ b/simple.html
@@ -88,7 +88,7 @@ span{color:red;}
         <li><a href="https://bbs.nga.cn/">NGA</a></li>
         <li><a href="https://www.hupu.com/">虎扑</a><span>の</span><a href="https://www.gcores.com/">机核</a></li>
         <li><a href="http://www.yxzzd.com/">Xbox早知道</li>
-        <li><a href="http://www.cnbeta.com/">cnBeta</a></li>
+        <li><a href="https://www.ithome.com/">IT之家</a></li>
         <li><a href="https://www.cnblogs.com/">cnBlogs</a></li>
         <li><a href="http://www.12306.cn/">12306</a></li>
         <li><a href="https://tv.byr.cn/">IPTV</a><span>の</span><a href="http://hdtv.neu6.edu.cn/">NEUTV</a></li><!-- 5th Line -->
