--- a/simple.html
+++ b/simple.html
@@ -80,7 +80,7 @@ span{color:red;}
         <li><a href="https://www.jd.com/">京东商城</a></li><!-- 3rd Line -->
         <li><a href="https://www.douyu.com/room/follow">DY</a><span>の</span><a href="https://www.panda.tv/myfollow">PD</a></li>
         <li><a href="https://www.gamersky.com/">游民星空</a></li>
-        <li><a href="https://www.douyin.com/">抖音</a></li>
+        <li><a href="https://www.douyin.com/">抖音</a><span>の</span><a href="https://www.xiaohongshu.com/">小红书</a></li>
         <li><a href="https://www.youtube.com/?gl=US"><span>YouTube</span></a></li>
         <li><a href="https://zh.wikipedia.org/">Wikipedia</a></li>
         <li><a href="https://www.douban.com/">豆瓣</a><span>の</span><a href="https://music.163.com/">云音乐</a></li>
@@ -91,10 +91,10 @@ span{color:red;}
         <li><a href="https://www.ithome.com/">IT之家</a></li>
         <li><a href="https://www.cnblogs.com/">cnBlogs</a></li>
         <li><a href="http://www.12306.cn/">12306</a></li>
-        <li><a href="https://tv.byr.cn/">IPTV</a><span>の</span><a href="http://hdtv.neu6.edu.cn/">NEUTV</a></li><!-- 5th Line -->
+        <li><a href="https://bbs.byr.cn/#!default">BBS</a></li><!-- 5th Line -->
         <li><a href="https://github.com/">GitHub</a>
         <li><a href="https://juejin.im/">Xitu</a>の<a href="https://www.v2ex.com/"><span>V2EX</span></a></li>
-        <li><a href="https://bbs.byr.cn/#!default">BBS</a><span>の</span><a href="http://bt.byr.cn/">BT</a></li>
+        <li><a href="https://www.yuque.com/">语雀</a><span>の</span><a href="https://kimi.moonshot.cn/">Kimi</a></li>
         <li><a href="https://www.oschina.net/">OS</a><span>の</span><a href="https://tool.oschina.net/">Tools</a></li>
         <li><a href="http://www.csdn.net/">CSDN</a></li>
         <li><a href="https://www.nowcoder.com/">NowCoder</a></li>
