--- a/index.html
+++ b/index.html
@@ -59,46 +59,46 @@ span{color:red;}
     <ul>
         <li><a href="https://www.baidu.com/">百度</a><span>の</span><a href="https://tieba.baidu.com/">贴吧</a></li>
         <li><a href="https://sports.sina.com.cn/">新浪</a>の<a href="https://weibo.com/"><span>微博</span></a></li>
-        <li><a href="http://www.163.com/">网易</a><span>の</span><a href="http://email.163.com/">邮箱</a></li>
         <li><a href="http://www.qq.com/">腾讯</a><span>の</span><a href="https://mail.qq.com/">邮箱</a></li>
+        <li><a href="http://www.163.com/">网易</a><span>の</span><a href="http://email.163.com/">邮箱</a></li>
         <li><a href="https://www.sohu.com/">搜狐</a></li>
         <li><a href="http://www.ifeng.com/">凤凰网</a></li>
         <li><a href="https://www.sogou.com/">搜狗</a></li><!-- 1st Line -->
         <li><a href="https://www.google.com/ncr" style="font-size: 18px">Google</a><span>の</span><a href="https://drive.google.com/drive/" style="font-size: 18px">Drive</a></li>
         <li><a href="https://news.google.com/news?ned=us">News</a><span>の</span><a href="https://news.google.com/news?ned=cn">新闻</a></li>
-        <li><a href="http://www.thepaper.cn/">澎湃新闻</a></li>
-        <li><a href="http://www.people.com.cn/">人民网</a></li>
-        <li><a href="http://www.icbc.com.cn/">工商银行</a></li>
-        <li><a href="http://www.psbc.com/">邮政储蓄</a></li>
+        <li><a href="https://wx.qq.com/">微信</a><span>の</span><a href="https://v.qq.com/">视频</a></li>
+        <li><a href="https://tophub.today/">热榜</a><span>の</span><a href="https://mo.fish/">摸鱼</a></li>
+        <li><a href="http://www.thepaper.cn/">澎湃</a><span>の</span><a href="http://www.people.com.cn/">人民</a></li>
+        <li><a href="http://www.icbc.com.cn/">工银</a><span>の</span><a href="http://www.psbc.com/">邮储</a></li>
         <li><a href="https://cn.bing.com/"><span>Bing</span></a></li><!-- 2nd Line -->
         <li><a href="https://www.bilibili.com/">Bilibili</a><span>の</span><a href="https://www.youku.com/">优酷</a></li>
         <li><a href="https://www.zhihu.com/"><span>知乎</span></a>の<a href="https://www.quora.com/"><span>Quora</span></a></li>
-        <li><a href="https://www.taobao.com/">淘宝网</a></li>
-        <li><a href="https://www.jd.com/">京东商城</a></li>
-        <li><a href="http://www.zol.com.cn/">ZOL</a></li>
-        <li><a href="http://www.bupt.edu.cn/">BUPT</a></li>
-        <li><a href="http://www.qidian.com/">起点中文网</a></li><!-- 3rd Line -->
+        <li><a href="https://weread.qq.com/">微信读书</a></li>
+        <li><a href="http://www.qidian.com/">起点</a><span>の</span><a href="https://fanqienovel.com/">番茄</a></li>
+        <li><a href="http://tieba.baidu.com/f?kw=%E6%98%BE%E5%8D%A1&fr=index&fp=0&ie=utf-8"><span>显卡</span></a><span>の</span><a href="http://www.zol.com.cn/">ZOL</a></li>
+        <li><a href="https://www.taobao.com/">淘宝</a><span>の</span><a href="https://www.fliggy.com/">飞猪</a></li>
+        <li><a href="https://www.jd.com/">京东商城</a></li><!-- 3rd Line -->
         <li><a href="https://www.douyu.com/room/follow">DY</a><span>の</span><a href="https://www.panda.tv/myfollow">PD</a></li>
-        <li><a href="https://stackoverflow.com/">stack<span>over</span>flow</a></li>
+        <li><a href="https://www.gamersky.com/">游民星空</a></li>
+        <li><a href="https://www.douyin.com/">抖音</a><span>の</span><a href="https://www.xiaohongshu.com/">小红书</a></li>
+        <li><a href="https://www.youtube.com/?gl=US"><span>YouTube</span></a></li>
         <li><a href="https://zh.wikipedia.org/">Wikipedia</a></li>
-        <li><a href="http://www.gogeeks.cn/">GoGeeks</a></li>
-        <li><a href="http://tieba.baidu.com/f?kw=%E6%98%BE%E5%8D%A1&fr=index&fp=0&ie=utf-8"><span>显卡吧</span></a></li>
-        <li><a href="http://lib.bupt.edu.cn/">图书馆</a></li>
-        <li><a href="http://www.toutiao.com/">今日头条</a></li><!-- 4th Line -->
-        <li><a href="https://www.v2ex.com/"><span>V2EX</span></a></li>
-        <li><a href="https://segmentfault.com/"><span>seg</span>ment<span>fault</span></a></li>
+        <li><a href="https://www.douban.com/">豆瓣</a><span>の</span><a href="https://music.163.com/">云音乐</a></li>
+        <li><a href="http://www.bupt.edu.cn/">BUPT</a><span>の</span><a href="https://bj.ke.com/">贝壳</a></li><!-- 4th Line -->
+        <li><a href="https://bbs.nga.cn/">NGA</a></li>
         <li><a href="https://www.hupu.com/">虎扑</a><span>の</span><a href="https://www.gcores.com/">机核</a></li>
-        <li><a href="http://www.cnbeta.com/">cnBeta</a></li>
+        <li><a href="http://www.yxzzd.com/">Xbox早知道</li>
+        <li><a href="https://www.ithome.com/">IT之家</a></li>
         <li><a href="https://www.cnblogs.com/">cnBlogs</a></li>
         <li><a href="http://www.12306.cn/">12306</a></li>
-        <li><a href="https://tv.byr.cn/">IPTV</a><span>の</span><a href="http://hdtv.neu6.edu.cn/">NEUTV</a></li><!-- 5th Line -->
+        <li><a href="https://bbs.byr.cn/#!default">BBS</a></li><!-- 5th Line -->
         <li><a href="https://github.com/">GitHub</a>
-        <li><a href="https://juejin.im/">Xitu</a></li>
-        <li><a href="https://bbs.byr.cn/#!default">BBS</a><span>の</span><a href="http://bt.byr.cn/">BT</a></li>
-        <li><a href="https://www.oschina.net/">OSChina</a></li>
+        <li><a href="https://juejin.im/">Xitu</a>の<a href="https://www.v2ex.com/"><span>V2EX</span></a></li>
+        <li><a href="https://www.yuque.com/">语雀</a><span>の</span><a href="https://kimi.moonshot.cn/">Kimi</a></li>
+        <li><a href="https://www.oschina.net/">OS</a><span>の</span><a href="https://tool.oschina.net/">Tools</a></li>
         <li><a href="http://www.csdn.net/">CSDN</a></li>
         <li><a href="https://www.nowcoder.com/">NowCoder</a></li>
-        <li><a href="https://www.youtube.com/?gl=US"><span>YouTube</span></a></li><!-- 6th Line -->
+        <li><a href="https://stackoverflow.com/">S<span>O</span>F</a><span>の</span><a href="https://segmentfault.com/">S<span>G</span>F</a></li><!-- 6th Line -->
     </ul>
 </div>
 
