--- a/simple.html
+++ b/simple.html
@@ -64,7 +64,7 @@ span{color:red;}
         <li><a href="https://www.sohu.com/">搜狐</a></li>
         <li><a href="http://www.ifeng.com/">凤凰网</a></li>
         <li><a href="https://www.sogou.com/">搜狗</a></li><!-- 1st Line -->
-        <li><a href="https://www.google.com/ncr" style="font-size: 18px">Google</a><span>の</span><a href="https://drive.google.com/drive/" style="font-size: 18px">Drive</a></li>
+        <li><a href="https://www.google.com/ncr" style="font-size: 18px">Google</a><span>の</span><a href="https://gemini.google.com/" style="font-size: 18px">Gemini</a></li>
         <li><a href="https://news.google.com/news?ned=us">News</a><span>の</span><a href="https://news.google.com/news?ned=cn">新闻</a></li>
         <li><a href="https://wx.qq.com/">微信</a><span>の</span><a href="https://v.qq.com/">视频</a></li>
         <li><a href="https://tophub.today/">热榜</a><span>の</span><a href="https://mo.fish/">摸鱼</a></li>
