--- a/simple.html
+++ b/simple.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon"/>
     <!-- 全局链接新窗口打开 -->
     <base target="_blank">
     <title>毛线</title>
