--- a/simple.html
+++ b/simple.html
@@ -222,9 +222,9 @@
     <div class="group-card">
         <div class="group-title">Portal & News</div>
         <div class="bubble-flow">
-            <div class="bubble"><a href="https://www.baidu.com/">百度</a><span>の</span><a href="https://tieba.baidu.com/">贴吧</a></div>
+            <div class="bubble"><a href="https://cn.bing.com/">Bing</a><span>の</span><a href="https://x.com/"><span class="hl">X</span></a></div>
             <div class="bubble"><a href="https://sports.sina.com.cn/">新浪</a><span>の</span><a href="https://weibo.com/"><span class="hl">微博</span></a></div>
-            <div class="bubble"><a href="https://cn.bing.com/"><span class="hl">Bing</span></a></div>
+            <div class="bubble"><a href="https://www.baidu.com/">百度</a><span>の</span><a href="https://tieba.baidu.com/">贴吧</a></div>
             <div class="bubble"><a href="http://www.qq.com/">腾讯</a><span>の</span><a href="https://mail.qq.com/">邮箱</a></div>
             <div class="bubble"><a href="http://www.163.com/">网易</a><span>の</span><a href="http://email.163.com/">邮箱</a></div>
             <div class="bubble"><a href="https://www.sohu.com/">搜狐</a></div>
@@ -264,11 +264,11 @@
     <div class="group-card">
         <div class="group-title">Social & Media</div>
         <div class="bubble-flow">
+            <div class="bubble"><a href="https://www.youtube.com/?gl=US"><span class="hl">YouTube</span></a></div>
             <div class="bubble"><a href="https://wx.qq.com/">微信</a><span>の</span><a href="https://v.qq.com/">视频</a></div>
             <div class="bubble"><a href="https://www.bilibili.com/">Bilibili</a><span>の</span><a href="https://www.youku.com/">优酷</a></div>
-            <div class="bubble"><a href="https://www.zhihu.com/"><span class="hl">知乎</span></a><span>の</span><a href="https://www.quora.com/">Quora</a></div>
             <div class="bubble"><a href="https://www.douyin.com/">抖音</a><span>の</span><a href="https://www.xiaohongshu.com/">小红书</a></div>
-            <div class="bubble"><a href="https://www.youtube.com/?gl=US"><span class="hl">YouTube</span></a></div>
+            <div class="bubble"><a href="https://www.zhihu.com/"><span class="hl">知乎</span></a><span>の</span><a href="https://www.quora.com/">Quora</a></div>
             <div class="bubble"><a href="https://www.douban.com/">豆瓣</a><span>の</span><a href="https://music.163.com/">云音乐</a></div>
             <div class="bubble"><a href="https://www.douyu.com/room/follow">DY</a><span>の</span><a href="https://www.panda.tv/myfollow">PD</a></div>
         </div>
